--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "langchain": "^0.0.171"
+    "langchain": "^0.0.171",
+    "sqlite3": "^5.1.6",
+    "typeorm": "^0.3.17"
   }
 }
